2000-04-24  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-reloc.c (_dl_relocate_object): Add one more
	__builtin_expect saying that we don't normally expect to profile.

	* sysdeps/i386/dl-machine.h (elf_machine_rel): Add
	__builtin_expect where desirable.

2000-04-23  Ulrich Drepper  <drepper@redhat.com>

	* manual/Makefile (chapters): Add syslog.
	* manual/syslog.texi: New file.
	* manual/math.texi: Fix references.
	* manual/terminal.texi: Likewise.
	Patch by Bryan Henderson <bryanh@giraffe-data.com>.

2000-04-18  Jakub Jelinek  <jakub@redhat.com>

	* posix/sys/wait.h: Define __WAIT_STATUS and the like either if
	stdlib.h was not included or __USE_XOPEN not defined.

2000-04-23  Ulrich Drepper  <drepper@redhat.com>

	* nss/Makefile (libnss_db-dbs): Remove stray backslash.
	Patch by Zack Weinberg <zack@wolery.cumb.org>.

2000-04-22  Ulrich Drepper  <drepper@redhat.com>

	* manual/examples/subopt.c (mount_opts): Add missing terminating
	entry.
	Reported by Michael Deutschmann <michael@talamasca.ocis.net>.

	* assert/assert-perr.c: Include <stdlib.h> for abort prototype.
	* libio/ftello.c: Likewise.
	* libio/ftello64.c: Likewise.
	* libio/ioftell.c: Likewise.
	* sysdeps/generic/memrchr.c: Likewise.
	* sysdeps/posix/libc_fatal.c: Likewise.
	* sysdeps/unix/sysv/linux/init-first.c: Likewise.
	* misc/fstab.c: Include <string.h> for strcmp prototype.
	* sysdeps/generic/ldsodefs.h: Likewise.
	* sysdeps/unix/sysv/linux/i386/sigaction.c: Likewise.
	Patch by Kurt Roeckx <Q@ping.be>.

	* nss/Makefile (libnss_db-dbs): Renamed from libnss_db-routines.
	Remove db-open.  Change all uses.
	(libnss_db-routines): Define as $(libnss_db-dbs) db-open.

2000-04-21  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/msgctl.c (__syscall_msgctl): Declare.
	* sysdeps/unix/sysv/linux/alpha/semctl.c (__syscall_semctl): Declare.
	* sysdeps/unix/sysv/linux/alpha/shmctl.c (__syscall_shmctl): Declare.
	* sysdeps/unix/sysv/linux/alpha/getrusage.S: Surround uses of $f28