@@ -1,5 +1,8 @@
 2000-04-24  Ulrich Drepper  <drepper@redhat.com>
 
+	* nis/nis_callback.c (__nis_create_callback): Partially undo last
+	patch.  Keep needed tests for failed memory allocation.
+
 	* elf/dl-reloc.c (_dl_relocate_object): Add one more
 	__builtin_expect saying that we don't normally expect to profile.
 
